--- a/avahi-dbus.cabal
+++ b/avahi-dbus.cabal
@@ -21,14 +21,14 @@ extra-source-files:  CHANGELOG.md
 library  
   exposed-modules: 
   hs-source-dirs: src
-  main-is:             Main.hs
+  -- main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-missing-signatures -fno-warn-unused-do-bind 
+  ghc-options: -Wall -fno-warn-missing-signatures -fno-warn-unused-do-bind 
   build-depends:       base >=4.12 && <4.13
                        , dbus 
                        , text
   -- hs-source-dirs:
   default-language:    Haskell2010
-  default-extensions: DeriveGeneric DerivingVia StrictData GADTs FlexibleContexts FlexibleInstances InstanceSigs LambdaCase NoImplicitPrelude MultiParamTypeClasses OverloadedStrings RecordWildCards ScopedTypeVariables TupleSections ViewPatterns
-  extra-libraries: z
+  default-extensions: 
+  extra-libraries: zlib
