--- a/avahi-dbus.cabal
+++ b/avahi-dbus.cabal
@@ -31,4 +31,4 @@ library
   -- hs-source-dirs:
   default-language:    Haskell2010
   default-extensions: 
-  extra-libraries: zlib
+  -- extra-libraries: zlib
